--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; glidertest v0.0.1 documentation</title>
-      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
+      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
 
   
@@ -168,6 +168,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="glidertest.html#glidertest.tools.max_depth_per_profile">max_depth_per_profile() (in module glidertest.tools)</a>
+</li>
       <li>
     module
 
@@ -203,10 +205,12 @@
 </li>
       <li><a href="glidertest.html#glidertest.plots.plot_ioosqc">plot_ioosqc() (in module glidertest.plots)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="glidertest.html#glidertest.plots.plot_max_depth_per_profile">plot_max_depth_per_profile() (in module glidertest.plots)</a>
+</li>
       <li><a href="glidertest.html#glidertest.plots.plot_outlier_duration">plot_outlier_duration() (in module glidertest.plots)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="glidertest.html#glidertest.plots.plot_prof_monotony">plot_prof_monotony() (in module glidertest.plots)</a>
 </li>
       <li><a href="glidertest.html#glidertest.plots.plot_quench_assess">plot_quench_assess() (in module glidertest.plots)</a>
@@ -220,6 +224,10 @@
       <li><a href="glidertest.html#glidertest.plots.plot_updown_bias">plot_updown_bias() (in module glidertest.plots)</a>
 </li>
       <li><a href="glidertest.html#glidertest.plots.plot_vertical_speeds_with_histograms">plot_vertical_speeds_with_histograms() (in module glidertest.plots)</a>
+</li>
+      <li><a href="glidertest.html#glidertest.utilities.plotting_labels">plotting_labels() (in module glidertest.utilities)</a>
+</li>
+      <li><a href="glidertest.html#glidertest.utilities.plotting_units">plotting_units() (in module glidertest.utilities)</a>
 </li>
       <li><a href="glidertest.html#glidertest.plots.process_optics_assess">process_optics_assess() (in module glidertest.plots)</a>
 </li>
@@ -249,7 +257,7 @@
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024, Eleanor Frajka-Williams, Chiara Monforte, Callum Rollo.</p>
+    <p>&#169; Copyright 2025, Eleanor Frajka-Williams, Chiara Monforte, Callum Rollo.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
